--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <div class="dropdown_buttons">
                 <button id="infobutton" class="btn infobtn">TST ry <i class="fas fa-caret-down"></i></button>
                 <button id="infobutton2" class="btn infobtn">KasarmiTalli <i class="fas fa-caret-down"></i></button>
+                <i class="fas fa-search" style="color:white;"></i>
             </div>
             <div id="info">
                 <h2>Turun Seudun TST ry</h2>
