--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <ul id="tstvalikko" class="menu">
                 <li id="menu-item-33538"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-30210 current_page_item menu-item-33538">
-                    <a href="http://www.tstry.fi/">Etusivu</a></li>
+                    <a href="#">Etusivu</a></li>
                 <li id="menu-item-10802"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-10802">
-                    <a href="http://www.tstry.fi/yhdistys/">Yhdistys</a>
+                    <a href="#">Yhdistys</a>
                     <ul class="sub-menu">
                         <li id="menu-item-33151"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33151"><a
-                                href="http://www.tstry.fi/yhdistys/toiminnan-arvot/">Toiminnan arvot</a></li>
+                                href="#">Toiminnan arvot</a></li>
                         <li id="menu-item-10807"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10807"><a
-                                href="http://www.tstry.fi/yhdistys/yhdistyksen-saannot/">Yhdistyksen säännöt</a></li>
+                                href="#">Yhdistyksen säännöt</a></li>
                         <li id="menu-item-10806"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10806"><a
-                                href="http://www.tstry.fi/yhdistys/organisaatio/">Organisaatio</a></li>
+                                href="#">Organisaatio</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-33704"
@@ -40,115 +40,115 @@
                     <ul class="sub-menu">
                         <li id="menu-item-10803"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10803"><a
-                                href="http://www.tstry.fi/jasenet/jaseneksi-liittyminen/">Jäseneksi liittyminen</a></li>
+                                href="#">Jäseneksi liittyminen</a></li>
                         <li id="menu-item-33193"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33193"><a
-                                href="http://www.tstry.fi/jasenet/jasenedut/">Jäsenedut</a></li>
+                                href="#">Jäsenedut</a></li>
                         <li id="menu-item-33543"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33543"><a
-                                href="http://www.tstry.fi/jasenet/jasentoimijat/">Jäsentoimijat</a></li>
+                                href="#">Jäsentoimijat</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-33152"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-33152">
-                    <a href="http://www.tstry.fi/toiminta/">Toiminta</a>
+                    <a href="#">Toiminta</a>
                     <ul class="sub-menu">
                         <li id="menu-item-31303"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31303"><a
-                                href="http://www.tstry.fi/toiminta/tulevat-tapahtumat/">Tulevat tapahtumat</a></li>
+                                href="#">Tulevat tapahtumat</a></li>
                         <li id="menu-item-33154"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33154"><a
-                                href="http://www.tstry.fi/toiminta/koulutukset-ja-kurssit/">Koulutukset ja kurssit</a></li>
+                                href="#">Koulutukset ja kurssit</a></li>
                         <li id="menu-item-33159"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33159"><a
-                                href="http://www.tstry.fi/toiminta/liikunta/">Liikunta</a></li>
+                                href="#">Liikunta</a></li>
                         <li id="menu-item-33171"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33171"><a
-                                href="http://www.tstry.fi/toiminta/retket-ja-matkat/">Retket ja matkat</a></li>
+                                href="#">Retket ja matkat</a></li>
                         <li id="menu-item-33157"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33157"><a
-                                href="http://www.tstry.fi/toiminta/poistotekstiilimyymala/">Poistotekstiilimyymälä</a></li>
+                                href="#">Poistotekstiilimyymälä</a></li>
                         <li id="menu-item-33165"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33165"><a
-                                href="http://www.tstry.fi/toiminta/ruokala/">Ruokaravintola KasarmiTalli</a></li>
+                                href="#">Ruokaravintola KasarmiTalli</a></li>
                         <li id="menu-item-33153"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33153"><a
-                                href="http://www.tstry.fi/toiminta/elintarvikejakelu/">Elintarvikejakelu</a></li>
+                                href="#">Elintarvikejakelu</a></li>
                         <li id="menu-item-33161"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33161"><a
-                                href="http://www.tstry.fi/toiminta/anna-duuni/">Anna Duuni -vene</a></li>
+                                href="#">Anna Duuni -vene</a></li>
                         <li id="menu-item-33169"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33169"><a
-                                href="http://www.tstry.fi/toiminta/paavainen/">Paavarotti-mökki</a></li>
+                                href="#">Paavarotti-mökki</a></li>
                         <li id="menu-item-33892"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33892"><a
-                                href="http://www.tstry.fi/toiminta/kerhot-ja-ryhmat/">Kerhot ja ryhmät</a></li>
+                                href="#">Kerhot ja ryhmät</a></li>
                         <li id="menu-item-10800"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10800"><a
-                                href="http://www.tstry.fi/toiminta/viikkotiedote/">Viikkotiedote</a></li>
+                                href="#">Viikkotiedote</a></li>
                         <li id="menu-item-33155"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33155"><a
-                                href="http://www.tstry.fi/toiminta/myytavana/">Myytävänä</a></li>
+                                href="#">Myytävänä</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-33870"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-33870">
-                    <a href="http://www.tstry.fi/tyollistaminen/">Työllistäminen</a>
+                    <a href="#">Työllistäminen</a>
                     <ul class="sub-menu">
                         <li id="menu-item-10805"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10805"><a
-                                href="http://www.tstry.fi/tyollistaminen/avoimia-tyopaikkoja/">Avoimia työpaikkoja</a></li>
+                                href="#">Avoimia työpaikkoja</a></li>
                         <li id="menu-item-33877"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33877"><a
-                                href="http://www.tstry.fi/tyollistaminen/palkkatuki/">Palkkatuki</a></li>
+                                href="#">Palkkatuki</a></li>
                         <li id="menu-item-33873"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33873"><a
-                                href="http://www.tstry.fi/tyollistaminen/tyokokeilu/">Työkokeilu</a></li>
+                                href="#">Työkokeilu</a></li>
                         <li id="menu-item-33150"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33150"><a
-                                href="http://www.tstry.fi/tyollistaminen/kuntouttava-tyotoiminta/">Kuntouttava
+                                href="#">Kuntouttava
                                 työtoiminta</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-33172"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-33172">
-                    <a href="http://www.tstry.fi/projektit/">Projektit</a>
+                    <a href="#">Projektit</a>
                     <ul class="sub-menu">
                         <li id="menu-item-33175"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33175"><a
-                                href="http://www.tstry.fi/projektit/tst-texvex/">TST-Texvex</a></li>
+                                href="#">TST-Texvex</a></li>
                         <li id="menu-item-33173"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33173"><a
-                                href="http://www.tstry.fi/projektit/viuhka-projekti/">Viuhka-projekti</a></li>
+                                href="#">Viuhka-projekti</a></li>
                         <li id="menu-item-33177"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33177"><a
-                                href="http://www.tstry.fi/projektit/projektihistoria/">Projektihistoria</a></li>
+                                href="#">Projektihistoria</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-33178"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-33178">
-                    <a href="http://www.tstry.fi/media/">Media</a>
+                    <a href="#">Media</a>
                     <ul class="sub-menu">
                         <li id="menu-item-27287"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-27287"><a
                                 title="lehdistotiedotteet"
-                                href="http://www.tstry.fi/media/lehdistotiedotteet/">Lehdistötiedotteet</a></li>
+                                href="#">Lehdistötiedotteet</a></li>
                         <li id="menu-item-36841"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36841"><a
-                                href="http://www.tstry.fi/media/logot/">Logot</a></li>
+                                href="#">Logot</a></li>
                         <li id="menu-item-33164"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33164"><a
-                                href="http://www.tstry.fi/media/tiedotus/">Tiedotus</a></li>
+                                href="#">Tiedotus</a></li>
                         <li id="menu-item-33166"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33166"><a
-                                href="http://www.tstry.fi/media/tstradio/">TST Radio</a></li>
+                                href="#">TST Radio</a></li>
                         <li id="menu-item-33170"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33170"><a
-                                href="http://www.tstry.fi/media/tarppiarkisto/">Tärppiarkisto</a></li>
+                                href="#">Tärppiarkisto</a></li>
                     </ul>
                 </li>
                 <li id="menu-item-10836" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10836"><a
-                        href="http://www.tstry.fi/yhteystiedot/">Yhteystiedot</a></li>
+                        href="#">Yhteystiedot</a></li>
             </ul>
             <div class="dropdown_buttons">
                 <button id="infobutton" class="btn infobtn">TST ry <i class="fas fa-caret-down"></i></button>
