elementtien kokoja parannettu

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -153,7 +154,7 @@
             <div class="dropdown_buttons">
                 <button id="infobutton" class="btn infobtn">TST ry <i class="fas fa-caret-down"></i></button>
                 <button id="infobutton2" class="btn infobtn">KasarmiTalli <i class="fas fa-caret-down"></i></button>
-                <i class="fas fa-search" style="color:white;"></i>
+                <i class="fas fa-search" style="color:white; font-size: 20px;"></i>
             </div>
             <div id="info">
                 <h2>Turun Seudun TST ry</h2>
@@ -226,7 +227,7 @@
                     <p class="slogan_big">Työtä, Sosiaalisuutta ja Terveyttä jo <br>vuodesta 1992</p>
                 </div>
                 <div class="my-paroller"
-                    style="background: url('hero_notext2.png') no-repeat center; background-size: cover; min-height: 500px; width: 100%;"
+                    style="background: url('hero_notext2.png') no-repeat center; background-size: cover; min-height: 100%; width: 100%;"
                     data-paroller-factor="0.3" data-paroller-factor-xs="0.2"></div>
                 <div class="elipsed-border"></div>
             </div>
