--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <p class="slogan_big">Työtä, Sosiaalisuutta ja Terveyttä jo <br>vuodesta 1992</p>
                 </div>
                 <div class="my-paroller"
-                    style="background: url('hero_notext2.png') no-repeat center; background-size: cover; min-height: 100%; width: 100%;"
+                    style="background: url('hero_notext2.jpg') no-repeat center; background-size: cover; min-height: 100%; width: 100%;"
                     data-paroller-factor="0.3" data-paroller-factor-xs="0.2"></div>
                 <div class="elipsed-border"></div>
             </div>
