--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>-->
     <script src="jquery.paroller.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
 </head>
 
 <body>
@@ -230,7 +231,11 @@
                 <div class="my-paroller"
                     style="background: url('hero_notext2.jpg') no-repeat center; background-size: cover; min-height: 100%; width: 100%;"
                     data-paroller-factor="0.3" data-paroller-factor-xs="0.2"></div>
-                <div class="elipsed-border"></div>
+                <svg id="cups" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1200 59.3" style="enable-background:new 0 0 1200 59.3;position: absolute;left: -5%;bottom: 0;width: 110%;fill: #fff;" xml:space="preserve">
+    	             <path id="simple-cup" d="M0,41.7c0,0,137-71.3,466-27.3C801,59.1,998,69.7,1200,29v1071.3H0V41.7z" data-original="M1200,0 v100 h-1200 v-100 h1200z"></path>
+    	             <path opacity="0" id="fancy-cup" d="M0,41.7c0,0,137-71.3,466-27.3C801,59.1,998,69.7,1200,29v1071.3H0V41.7z" data-svg-origin="0 0" transform="matrix(1,0,0,0,0,0)" style=""></path>
+                </svg>
+
             </div>
         </section>
 
