--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </section>
 
 
-        <section class="flex-grid">
+        <section class="flex-grid" style="margin-top:-20px;">
             <div class="row-container">
                 <a class="row-link" href="#">Pääjutut <i class="fas fa-angle-right"></i></a>
                 <div class="flex-row">
