--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img class="logo" src="small_transp.png">
             <ul id="tstvalikko" class="menu">
                 <li id="menu-item-33538"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-30210 current_page_item menu-item-33538">
+                    class="menu-item current menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-30210 current_page_item menu-item-33538">
                     <a href="#">Etusivu</a></li>
                 <li id="menu-item-10802"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-10802">
@@ -309,28 +309,28 @@
             </div>
             <div class="row-container" style="margin-top: 60px;">
                 <div class="flex-row">
-                    <div class="col white_text" style="background: #0d47a1;">
-                        <div class="text">
-                            <h2>TST:n viikko</h2>
-                            <p>
-                                <b>Ma 13.5. Aukioloajat</b><br>
-                                Toimintakeskus klo 8 – 16<br>
-                                Ruokaravintola Kasarmitalli klo 8 – 15<br>
-                                TST-Texvex klo 9 – 15<br><br>
+                  <div class="col white_text" style="background: #0d47a1;">
+                      <div class="text">
+                          <h2>TST:n viikko</h2>
+                          <p>
+                              <b>Ma 13.5. Aukioloajat</b><br>
+                              Toimintakeskus klo 8 – 16<br>
+                              Ruokaravintola Kasarmitalli klo 8 – 15<br>
+                              TST-Texvex klo 9 – 15<br><br>
 
-                                <b>Ma 13.5. Tapahtumat</b><br>
-                                Klo 10–15 Villiyrttikurssi, osa 2: Keräilyretki Kuhankuonoon. Ilmoittautuneille.<br><br>
+                              <b>Ma 13.5. Tapahtumat</b><br>
+                              Klo 10–15 Villiyrttikurssi, osa 2: Keräilyretki Kuhankuonoon. Ilmoittautuneille.<br><br>
 
 
-                                <b>Ma 13.5. Ruokalista</b><br>
-                                Pinaattikeitto<br>
-                                Lihapullat<br><br>
+                              <b>Ma 13.5. Ruokalista</b><br>
+                              Pinaattikeitto<br>
+                              Lihapullat<br><br>
 
-                                <b>Ma 13.5. Liikunta</b><br>
-                                Monitoimitilan pingis-, biljardi- ja kuntosalilaitteet käytettävissä.
-                            </p>
-                        </div>
-                    </div>
+                              <b>Ma 13.5. Liikunta</b><br>
+                              Monitoimitilan pingis-, biljardi- ja kuntosalilaitteet käytettävissä.
+                          </p>
+                      </div>
+                  </div>
                     <div class="col white_text" style="background: #ff007e;">
                         <div class="text">
                             <h2>Ilmoittautuminen käynissä</h2>
@@ -378,7 +378,7 @@
                 <div class="flex-row">
                     <div class="col">
                         <img
-                            src="https://www.espoo.fi/download/noname/%7BAFD27AEB-F217-45B0-95D1-99368F5F1BC2%7D/114116?exactheight=270&exactwidth=480">
+                            src="https://www.espoo.fi/download/noname/%7B59B4CEB5-374B-45DA-B18D-99D801F8BD37%7D/117498?exactheight=270&exactwidth=480">
                         <div class="text">
                             <h2>Otsikko yksi</h2>
                             <p>Lorem ipsum dolor sit amet</p>
