--- a/yhdistys.html
+++ b/yhdistys.html
@@ -20,11 +20,11 @@
             <img class="logo" src="small_transp.png">
             <ul id="tstvalikko" class="menu">
                 <li id="menu-item-33538"
-                    class="menu-item current menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-30210 current_page_item menu-item-33538">
-                    <a href="#">Etusivu</a></li>
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-30210 current_page_item menu-item-33538">
+                    <a href="index.html">Etusivu</a></li>
                 <li id="menu-item-10802"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-10802">
-                    <a href="yhdistys.html">Yhdistys</a>
+                    class="menu-item current menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-10802">
+                    <a href="#">Yhdistys</a>
                     <ul class="sub-menu">
                         <li id="menu-item-33151"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33151"><a
@@ -239,198 +239,7 @@
             </div>
         </section>
 
-
-        <section class="flex-grid" style="margin-top:-20px;">
-            <div class="row-container">
-                <a class="row-link" href="#">Pääjutut <i class="fas fa-angle-right"></i></a>
-                <div class="flex-row">
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7BA8FB7D56-8E9D-47DE-A3A1-0AFDD20CD07D%7D/114083?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Tutustu Viuhka-projektin toukokuun ohjelmistoon</h2>
-                            <p class="date">16.4.2019</p>
-                            <p>
-                                TST:n Viuhka-projektin toukokuun ohjelmisto on julkaistu. Luvassa on kiinnostavaa ja
-                                monipuolista toimintaa liikunnasta ruumiinkulttuurin kautta hengen ravintoon.
-                                Ruokakursseja, retkiä, mökkeilyä, liikuntaa, kulttuuria. Tai miten olisi esimerkiksi
-                                pihapelien pelaaminen Turun linnan puistossa 22. toukokuuta?
-                                <br><br>
-                                Viuhka-projekti koordinoi ja järjestää toimintaa Turun seudulla asuville
-                                +35-65-vuotiaille pitkäaikaistyöttömille arkielämän tueksi. Osallistuminen ryhmiin,
-                                tapahtumiin ja ohjauksiin on maksutonta eikä edellytä TST ry:n jäsenyyttä. Tervetuloa
-                                mukaan.
-                            </p>
-                            <a class="read-more" href="#">Lue koko juttu <i class="fas fa-stream"></i></a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7B9FBB2086-047B-4308-83E3-CE232B139349%7D/114044?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>TST tarjoaa aktiivimallin ehdot täyttävää toimintaa</h2>
-                            <p class="date">2.4.2019</p>
-                            <p>
-                                Työtön voi täyttää aktiivimallin mukaisen aktiivisuusehdon uusilla tavoilla 1.4. 2019
-                                lähtien. Aktiivisuutta kerryttää nyt myös työllistymistä tukeva toiminta, jonka
-                                järjestäjiä ovat esimerkiksi kunnat, kuntayhtymät, ammattiliitot, Työttömien
-                                Keskusjärjestö tai sen jäsenyhdistykset tai muut julkista rahoitusta saavat
-                                rekisteröidyt yhdistykset.
-                                <br><br>
-                                Kelan mukaan aktiivisuus on riittävää, jos työllistymistä tukeviin palveluihin
-                                osallistuminen kestää tarkastelujakson aikana vähintään 5 päivää. Uudet toiminnan muodot
-                                kerryttävät aktiivisuutta vain, jos 65 maksupäivän tarkastelujakso alkaa 1.4.2019 tai
-                                sen jälkeen.
-                            </p>
-                            <a class="read-more" href="#">Lue koko juttu <i class="fas fa-stream"></i></a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7BDA7E16B4-3935-416B-A05F-5178F35D111C%7D/112703?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Hae nyt TST:n määräaikaisia työpaikkoja 2019</h2>
-                            <p class="date">2.11.2018</p>
-                            <p>
-                                Turun Seudun TST ry:ssä on haettavana määräaikaisia, palkkatuettuja työpaikkoja useissa
-                                erilaisissa työtehtävissä kuluvalle vuodelle.
-                                <br><br>
-                                Kaikki TST:n työtehtävät on tarkoitettu tukemaan työelämään paluuta pitkän työttömyyden
-                                jälkeen. Niihin edellytetään kahden vuoden työttömyyttä sekä vähintään 300 päivän ajalta
-                                maksettua työmarkkinatukea.
-                                <br><br>
-                                TST-Texvex -tekstiilikierrätyksessä on tarjolla myös työkokeilupaikkoja.
-                                <br><br>
-                                <a href="#" class="link">Katso työpaikat -sivu</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row-container" style="margin-top: 60px;">
-                <div class="flex-row">
-                  <div class="col white_text" style="background: #0d47a1;">
-                      <div class="text">
-                          <h2>TST:n viikko</h2>
-                          <p>
-                              <b>Ma 13.5. Aukioloajat</b><br>
-                              Toimintakeskus klo 8 – 16<br>
-                              Ruokaravintola Kasarmitalli klo 8 – 15<br>
-                              TST-Texvex klo 9 – 15<br><br>
-
-                              <b>Ma 13.5. Tapahtumat</b><br>
-                              Klo 10–15 Villiyrttikurssi, osa 2: Keräilyretki Kuhankuonoon. Ilmoittautuneille.<br><br>
-
-
-                              <b>Ma 13.5. Ruokalista</b><br>
-                              Pinaattikeitto<br>
-                              Lihapullat<br><br>
-
-                              <b>Ma 13.5. Liikunta</b><br>
-                              Monitoimitilan pingis-, biljardi- ja kuntosalilaitteet käytettävissä.
-                          </p>
-                      </div>
-                  </div>
-                    <div class="col white_text" style="background: #ff007e;">
-                        <div class="text">
-                            <h2>Ilmoittautuminen käynissä</h2>
-                            <p><strong>Ilmoittaudu nyt: </strong><a class="link" href="#">Maksuttomat atk-koulutukset
-                                    TST:n jäsenille.</a></p>
-                            <p><strong>To 16.5.</strong>&nbsp;klo 13 mennessä <a class="link" href="#">päiväretkelle
-                                    Lohjalle (Lähihistoriaa, viiniä ja mosaiikkia).</a></p>
-                            <p><strong>To 23.5.</strong> klo 13 mennessä <a class="link" href="#">lintu- ja
-                                    luontoretkelle Örön saarelle</a></p>
-                            <p><strong>Pe 31.5.</strong>&nbsp;klo 14 mennessä <a class="link" href="#">teatterimatkalle
-                                    Hämeenlinnan Uuteen Kesäteatteriin (Sellaista elämä on – Juha Vainion tarina).</a>
-                            </p>
-                            <p><strong>Pe 7.6.</strong> klo 14 mennessä <a class="link"
-                                    href="#">työturvallisuuskorttikoulutukseen.</a></p>
-                            <p><strong>To 20.6.</strong> klo 12 mennessä matkalle <a class="link" href="#">Stefan
-                                    Bremerin valokuvanäyttelyyn <em>Keskeltä ja täysillä</em></a></p>
-                        </div>
-                    </div>
-                    <div class="col white_text" style="background: #ff8100;">
-                        <div class="text">
-                            <h2>Koulutukset</h2>
-                            <p>
-                                <strong>Kansiot ja tiedostot sekä varmuuskopiointi </strong>ti 7.5. ja 14.5.<br>
-                                <strong>Atk:n perusteet ja internet </strong>to 9.5., 16.5. ja 23.5.<strong><br>
-                                    Internet ja sähköinen asiointi </strong>ti 21.5. ja 28.5. <strong><br>
-                                    Atk ja internet jatkokurssi </strong>to 6.6. ja 13.6., ke 19.6. ja to 27.6.<br>
-                                <strong>Työturvallisuuskorttikoulutus </strong>ti 11.6. ja to 13.6.<strong><br>
-                                    Veneilyn peruskurssi </strong>14.5. alkaen.<br>
-                                <strong>Hygieniapassikurssi</strong> 26.4.<br>
-                                <strong>Kompassin kompensointi- ja kalibrointikurssi </strong>2.4.<br>
-                                <strong>Reitintekokurssi</strong> 25.3 tai 26.3.<br>
-                                <strong>Windows 10 tutuksi (internet-osio)</strong> 11.3. alkaen.<br>
-                                <strong>ATK:n perusteet (internet-osio)</strong> ke 6.3. alkaen.<strong><br>
-                                    ATK:n perusteet </strong>ke 30.1. alkaen.<strong><br>
-                                    Windows 10 tutuksi </strong>ma 28.1. alkaen.<strong><br>
-                                    Englanti </strong>ke 16.1. alkaen.<br>
-                                <strong>Ruotsi </strong>ke 16.1. alkaen.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row-container">
-                <a class="row-link" href="#">Toiminta <i class="fas fa-angle-right"></i></a>
-                <div class="flex-row">
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7B59B4CEB5-374B-45DA-B18D-99D801F8BD37%7D/117498?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko yksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7BB38D595E-51AE-4319-94C3-770DBEBE4BE8%7D/114189?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko kaksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7B951C3000-269E-4E07-8BEC-E8C4308F5C7A%7D/114177?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko yksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row-container">
-                <a class="row-link" href="#">TST Texvex <i class="fas fa-angle-right"></i></a>
-                <div class="flex-row">
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7B9BB5591C-0228-493B-8284-2CCBBC672F44%7D/114202?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko yksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7BC57442B7-549C-48DC-BF89-FC488A595DC2%7D/106059?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko kaksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img
-                            src="https://www.espoo.fi/download/noname/%7B951C3000-269E-4E07-8BEC-E8C4308F5C7A%7D/114177?exactheight=270&exactwidth=480">
-                        <div class="text">
-                            <h2>Otsikko yksi</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+   
     </div>
     </section>
 
